--- a/Toggl.Droid/Resources/layout/CalendarHeaderView.axml
+++ b/Toggl.Droid/Resources/layout/CalendarHeaderView.axml
@@ -153,7 +153,7 @@
             android:fontFamily="sans-serif"
             android:textStyle="normal"
             android:textColor="@android:color/white"
-            android:background="@drawable/BlueButton"
+            android:background="@drawable/RaisedButton"
             android:foreground="?android:attr/selectableItemBackground"
             android:textAllCaps="false"
             tools:text="Link calendars"
