--- a/Toggl.Droid/Resources/layout/CalendarOnboardingView.axml
+++ b/Toggl.Droid/Resources/layout/CalendarOnboardingView.axml
@@ -50,7 +50,7 @@
                 android:layout_marginTop="24dp"
                 android:paddingLeft="30dp"
                 android:paddingRight="30dp"
-                android:background="@drawable/BlueButton"
+                android:background="@drawable/RaisedButton"
                 android:topLeftRadius="4dp"
                 android:topRightRadius="4dp"
                 android:bottomLeftRadius="4dp"
@@ -58,7 +58,7 @@
                 android:textSize="14sp"
                 android:fontFamily="sans-serif-medium"
                 android:textStyle="normal"
-                android:textColor="@android:color/white"
+                android:textColor="@color/primaryText"
                 android:textAllCaps="false"
                 tools:text="Link your calendars" />
         <TextView
