--- a/Toggl.Droid/Resources/layout/ForgotPasswordActivity.axml
+++ b/Toggl.Droid/Resources/layout/ForgotPasswordActivity.axml
@@ -45,10 +45,11 @@
         android:layout_width="match_parent">
         <Button
             android:id="@+id/ResetPasswordButton"
+            android:background="@null"
             android:layout_height="36dp"
             android:layout_width="match_parent"
             tools:text="Get Password Reset Link"
-            android:textColor="@color/BlueButtonTextColor"
+            android:textColor="@color/RaisedButtonTextColor"
             android:foreground="?attr/selectableItemBackground" />
         <ProgressBar
             android:id="@+id/LoadingProgressBar"
