--- a/Toggl.Droid/Resources/layout/NoWorkspaceFragment.axml
+++ b/Toggl.Droid/Resources/layout/NoWorkspaceFragment.axml
@@ -69,7 +69,7 @@
         android:focusable="true"
         android:textAllCaps="true"
         tools:text="Try Again"
-        android:textColor="@color/BlueTextColor"
+        android:textColor="@color/FlatButtonTextColor"
         android:fontFamily="sans-serif-medium"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -89,7 +89,7 @@
         android:clickable="true"
         android:focusable="true"
         android:textAllCaps="true"
-        android:textColor="@color/BlueTextColor"
+        android:textColor="@color/FlatButtonTextColor"
         android:fontFamily="sans-serif-medium"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBaseline_toBaselineOf="@id/TryAgainTextView"
