--- a/Toggl.Droid/Resources/layout/ForgotPasswordActivity.axml
+++ b/Toggl.Droid/Resources/layout/ForgotPasswordActivity.axml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:fitsSystemWindows="true"
+    android:orientation="vertical"
     android:animateLayoutChanges="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.v7.widget.Toolbar
         android:id="@+id/Toolbar"
-        android:elevation="0dp"
         android:background="@color/background"
         app:titleTextColor="@color/primaryText"
         android:theme="@style/AppBarTheme"
@@ -26,8 +25,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ForgotPasswordToolbar">
+        android:layout_height="wrap_content">
         <EditText
             android:id="@+id/LoginEmailEditText"
             android:layout_width="match_parent"
@@ -41,7 +39,6 @@
         android:layout_marginTop="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:layout_below="@+id/LoginEmail"
         android:layout_width="match_parent">
         <Button
             android:id="@+id/ResetPasswordButton"
@@ -59,4 +56,4 @@
             android:indeterminateTint="@android:color/white"
             style="?android:attr/progressBarStyleLargeInverse" />
     </FrameLayout>
-</RelativeLayout>
+</LinearLayout>
