--- a/Toggl.Droid/Resources/layout/LoginActivity.axml
+++ b/Toggl.Droid/Resources/layout/LoginActivity.axml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content">
             <ImageView
                 android:id="@+id/LoginLogo"
-                android:src="@drawable/logo_black"
+                android:src="@drawable/ic_toggl_logo"
                 android:layout_width="102dp"
                 android:layout_height="32dp"
                 android:layout_marginTop="64dp"
